# cookiecutter-fastapi-aws-sam

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .talismanrc  CLAUDE.md  README.md  cookiecutter.json  justfile  pyproject.toml
.github/workflows/: build-pipeline.yml  jfrog-github-oidc-example.yml
docs/: pypi_release_checklist.md
python-fastapi-aws-sam/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  justfile  pyproject.toml
python-fastapi-aws-sam/.github/: ISSUE_TEMPLATE.md
python-fastapi-aws-sam/docs/: index.md  installation.md  usage.md
python-fastapi-aws-sam/infra/: template.yaml
python-fastapi-aws-sam/src/python_fastapi_aws_sam/: __init__.py  cli.py  config.py  main.py  model.py  version_utils.py
python-fastapi-aws-sam/src/python_fastapi_aws_sam/controllers/: activity.py  vegetables.py
python-fastapi-aws-sam/tests/: __init__.py  test_python_fastapi_aws_sam.py
{{cookiecutter.pypi_package_name}}/: .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml
{{cookiecutter.pypi_package_name}}/docs/: installation.md
{{cookiecutter.pypi_package_name}}/infra/: samconfig.toml  template.yaml
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli.py  config.py  main.py  model.py  version_utils.py
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.project_slug}}/controllers/: activity.py  fruits.py  hello_world.py  vegetables.py
