[tool.poetry]
name = "cookiecutter-fastapi-aws-sam"
version = "0.2.0"
description = "Cookiecutter template for a FastAPI + AWS SAM"
readme = "README.md"
license = "MIT"
authors = [
    "Audrey M. Roy Greenfeld <audrey@feldroy.com>",
    "Javier Matías-Cabrera <javier@javiermatias.com>"
]
keywords = ["cookiecutter", "template", "package"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cookiecutter = ">=2.6.0"
typer = ">=0.16.0"
alabaster = ">=1.0.0"
watchdog = ">=6.0.0"
fastapi = {version = ">=0.116.1,<0.117.0", extras = ["standard-no-fastapi-cloud-cli"]}
cryptography = ">=46.0.1,<47.0.0"

[tool.poetry.group.test.dependencies]
coverage = "^7.0"
pytest = "^8.0"
pytest-cookies = "^0.7"
ruff = "^0.11"
mypy = "^1.15"
ipdb = "^0.13"
tox = "^4.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6"

[tool.poetry.urls]
homepage = "https://github.com/jmatias/cookiecutter-fastapi-aws-sam"

[tool.ruff]
exclude = [
    "*cookiecutter.pypi_package_name*"
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
