[project]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]
maintainers = [
  {name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}"}
]

license = {text = "MIT"}



[project.urls]
bugs = "https://github.com/{{cookiecutter.__gh_slug}}/issues"
changelog = "https://github.com/{{cookiecutter.__gh_slug}}/blob/master/changelog.md"
homepage = "https://github.com/{{cookiecutter.__gh_slug}}"




#    ____   _____  ____   _____  _   _  ____   _____  _   _   ____  ___  _____  ____
#   |  _ \ | ____||  _ \ | ____|| \ | ||  _ \ | ____|| \ | | / ___||_ _|| ____|/ ___|
#   | | | ||  _|  | |_) ||  _|  |  \| || | | ||  _|  |  \| || |     | | |  _|  \___ \
#   | |_| || |___ |  __/ | |___ | |\  || |_| || |___ | |\  || |___  | | | |___  ___) |
#   |____/ |_____||_|    |_____||_| \_||____/ |_____||_| \_| \____||___||_____||____/
#

requires-python = ">=3.12"

dependencies = [
    "typer",
    "fastapi[standard-no-fastapi-cloud-cli] (>=0.116.1,<0.117.0)"
]

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"


#    _      ___  _   _  _____  _____  ____
#   | |    |_ _|| \ | ||_   _|| ____||  _ \
#   | |     | | |  \| |  | |  |  _|  | |_) |
#   | |___  | | | |\  |  | |  | |___ |  _ <
#   |_____||___||_| \_|  |_|  |_____||_| \_\
#

[tool.black]
line-length = 100
target-version = ['py313', 'py312']
extend-exclude = '''
^/python-client
'''

#     ____  ___   ____   _____      _     _   _     _     _   __   __ ____  ___  ____
#    / ___|/ _ \ |  _ \ | ____|    / \   | \ | |   / \   | |  \ \ / // ___||_ _|/ ___|
#   | |   | | | || | | ||  _|     / _ \  |  \| |  / _ \  | |   \ V / \___ \ | | \___ \
#   | |___| |_| || |_| || |___   / ___ \ | |\  | / ___ \ | |___ | |   ___) || |  ___) |
#    \____|\___/ |____/ |_____| /_/   \_\|_| \_|/_/   \_\|_____||_|  |____/|___||____/
#
[[tool.mypy.overrides]]
module = ["pyodbc.*"]
ignore_missing_imports = true

[tool.flake8]
count = true

#    _   _   _   _   ___   _____     _____   _____   ____    _____   ____
#   | | | | | \ | | |_ _| |_   _|   |_   _| | ____| / ___|  |_   _| / ___|
#   | | | | |  \| |  | |    | |       | |   |  _|   \___ \    | |   \___ \
#   | |_| | | |\  |  | |    | |       | |   | |___   ___) |   | |    ___) |
#    \___/  |_| \_| |___|   |_|       |_|   |_____| |____/    |_|   |____/
#

[tool.pytest.ini_options]
addopts = "-p no:warnings"
markers = [
    "integration",
    "unit",
    "aat"
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
