[tool.poetry]
name = "{{cookiecutter.pypi_package_name}}"
version = "{{ cookiecutter.first_version }}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]
license = "MIT"
packages = [{include = "{{cookiecutter.project_slug}}", from = "src"}]
include = [
    "LICENSE",
    "CONTRIBUTING.md",
    "HISTORY.md",
]



#    ____   _____  ____   _____  _   _  ____   _____  _   _   ____  ___  _____  ____
#   |  _ \ | ____||  _ \ | ____|| \ | ||  _ \ | ____|| \ | | / ___||_ _|| ____|/ ___|
#   | | | ||  _|  | |_) ||  _|  |  \| || | | ||  _|  |  \| || |     | | |  _|  \___ \
#   | |_| || |___ |  __/ | |___ | |\  || |_| || |___ | |\  || |___  | | | |___  ___) |
#   |____/ |_____||_|    |_____||_| \_||____/ |_____||_| \_| \____||___||_____||____/
#

[tool.poetry.dependencies]
python = "^{{ cookiecutter.runtime.replace('python', '') }}"
typer = "^0.15.0"
fastapi = {version = ">=0.116.1", extras = ["standard-no-fastapi-cloud-cli"]}
mangum = ">=0.19.0,<0.22.0"
faker = ">=37.6.0,<41.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
ruff = "^0.11.0"


#    _      ___  _   _  _____  _____  ____
#   | |    |_ _|| \ | ||_   _|| ____||  _ \
#   | |     | | |  \| |  | |  |  _|  | |_) |
#   | |___  | | | |\  |  | |  | |___ |  _ <
#   |_____||___||_| \_|  |_|  |_____||_| \_\
#

[tool.black]
line-length = 100
target-version = ['py313', 'py312']
extend-exclude = '''
^/python-client
'''

#     ____  ___   ____   _____      _     _   _     _     _   __   __ ____  ___  ____
#    / ___|/ _ \ |  _ \ | ____|    / \   | \ | |   / \   | |  \ \ / // ___||_ _|/ ___|
#   | |   | | | || | | ||  _|     / _ \  |  \| |  / _ \  | |   \ V / \___ \ | | \___ \
#   | |___| |_| || |_| || |___   / ___ \ | |\  | / ___ \ | |___ | |   ___) || |  ___) |
#    \____|\___/ |____/ |_____| /_/   \_\|_| \_|/_/   \_\|_____||_|  |____/|___||____/
#
[[tool.mypy.overrides]]
module = ["pyodbc.*"]
ignore_missing_imports = true

[tool.flake8]
count = true

#    _   _   _   _   ___   _____     _____   _____   ____    _____   ____
#   | | | | | \ | | |_ _| |_   _|   |_   _| | ____| / ___|  |_   _| / ___|
#   | | | | |  \| |  | |    | |       | |   |  _|   \___ \    | |   \___ \
#   | |_| | | |\  |  | |    | |       | |   | |___   ___) |   | |    ___) |
#    \___/  |_| \_| |___|   |_|       |_|   |_____| |____/    |_|   |____/
#

[tool.pytest.ini_options]
addopts = "-p no:warnings"
markers = [
    "integration",
    "unit",
    "aat"
]




[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
